--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lodash": "^4.17.21",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.34.1"
   },
   "devDependencies": {
     "@types/classnames": "^2.3.1",
@@ -19,6 +20,7 @@
     "@types/react": "17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
+    "babel-plugin-inline-react-svg": "^2.0.1",
     "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
