chore(config): 스타일 및 바벨 관련 설정 추가

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -48,6 +48,7 @@
     "value-keyword-case": null,
     "declaration-empty-line-before": "never",
     "function-whitespace-after": "never",
-    "no-descending-specificity": null
+    "no-descending-specificity": null,
+    "no-missing-end-of-source-newline": null
   }
 }
